# esp32-node

./: .gitignore  README.md  parse_inputs.py  partitions.csv  protocol.md  send_to_esp.py
main/: CMakeLists.txt  Kconfig.projbuild  discovery.h  fireworks.h  io_expander.h  main.c  ota.h  tcp_io.h  wifi.h  ws2811.h
main/web/: advanced.html  compile.py  home.html
main/web/static/: main.css
main/web/static/js/: fetchvars.js  main.js
main/web/templates/: base.html  index.html
main/web/templates/sequences/: builder.html  index.html  visualize.html
main/web/templates/settings/: device.html  index.html
main/web/templates/settings/launchers/: edit_fp.html  edit_name.html  index.html
main/web/templates/settings/launchers/node_settings/: listing.html  manage.html
ota_scripts/: restart.py  send_ota_msg.py  set_display.py  upload_bin.py
